--- a/XamarinApp/XamarinApp/XamarinApp.csproj
+++ b/XamarinApp/XamarinApp/XamarinApp.csproj
@@ -39,7 +39,11 @@
     <Compile Include="Classes\MasterPageItem.cs" />
     <Compile Include="Classes\MenuItems.cs" />
     <Compile Include="Interfaces\IMenuItems.cs" />
+    <Compile Include="Models\Job.cs" />
+    <Compile Include="Models\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Home.cs" />
+    <Compile Include="Mvvm\MvvmBase.cs" />
     <Compile Include="Views\About.xaml.cs">
       <DependentUpon>About.xaml</DependentUpon>
     </Compile>
